--- a/templates/index.html
+++ b/templates/index.html
@@ -8,8 +8,13 @@
     <body>
         <h1> Welcome to MyBLOG </h1>
         <hr>
-        {{ posts }}
+        {% for post in posts %}
+        <a href="post/{{post.slug}}"> #{{forloop.counter}}: {{ post.title }} </a>
+        <br>
+        <br>
+        {% endfor %}
         <hr>
         <h3> 現在時間: {{ now }} </h3>
     </body>
+
 </html>
