--- a/templates/scaffolds/base.html
+++ b/templates/scaffolds/base.html
@@ -3,6 +3,8 @@
         <meta charset="utf-8">
         <title> Django CMS </title>
         {% include "components/header.css.html" %}
+        {% include "components/pages.style.lib.html" %}
+        {% include "components/page.script.lib.html" %}
     </head>
 
 
